kuber/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gke-gpu-service2
            port:
              number: 80
#      - path: /discounted
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: gke-gpu-service2
#            port:
#              number: 80
